tests/lean/error_pos_bug2.lean.expected.out
error_pos_bug2.lean:17:37: error: type expected at
  A
